--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,364 @@
 <body>
     <%- include("common/header.ejs"); %>
     <div id="container">
-        메인페이지
+        <div class="slide section">
+            <div class="view">
+                <div class="slide_box">
+                    <div class="bg"></div>
+                    <div class="text_box">
+                        <h2 class="slide_title">타이틀입니다1</h2>
+                        <p class="sub_text">
+                            첫번째 문단입니다.<br>
+                            두번째 문단입니다.
+                        </p>
+                        <div class="slide_btn">
+                            <a href="#">바로가기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_box">
+                    <div class="bg"></div>
+                    <div class="text_box">
+                        <div class="bg_wrap">
+                            <h2 class="slide_title">타이틀입니다2</h2>
+                            <p class="sub_text">
+                                첫번째 문단입니다.<br>
+                                두번째 문단입니다.
+                            </p>
+                            <div class="slide_btn">
+                                <a href="#">바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_box">
+                    <div class="bg"></div>
+                    <div class="text_box">
+                        <h2 class="slide_title">타이틀입니다3</h2>
+                        <p class="sub_text">
+                            첫번째 문단입니다.<br>
+                            두번째 문단입니다.
+                        </p>
+                        <div class="slide_btn">
+                            <a href="#">바로가기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_box">
+                    <div class="bg"></div>
+                    <div class="text_box">
+                        <h2 class="slide_title">타이틀입니다4</h2>
+                        <p class="sub_text">
+                            첫번째 문단입니다.<br>
+                            두번째 문단입니다.
+                        </p>
+                        <div class="slide_btn">
+                            <a href="#">바로가기</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="prev_next">
+                <div class="prev"><i class="fa-solid fa-chevron-left"></i></div>
+                <div class="next"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
+            <ul class="circle_btn">
+                <li class="circle on"><a href="#"></a></li>
+                <li class="circle"><a href="#"></a></li>
+                <li class="circle"><a href="#"></a></li>
+                <li class="circle"><a href="#"></a></li>
+            </ul>
+        </div>
+        <div class="popular_local section">
+            <div class="center">
+                <div class="title_box">
+                    <h2 class="title">최근 인기있는 지역!</h2>
+                    <p class="sub_title">가고싶은 힐링지역을 선택하세요</p>
+                </div>
+                <div class="local_wrap">
+                    <div class="local_box mg">
+                        <div class="text_box">
+                            <p class="text1">서울</p>
+                            <p class="text2">서울시 어딘가</p>
+                        </div>
+                        <div class="hover_box">
+                            주소쓰기
+                        </div>
+                    </div>
+                    <div class="local_box mg">
+                        <div class="text_box">
+                            <p class="text1">서울</p>
+                            <p class="text2">서울시 어딘가</p>
+                        </div>
+                        <div class="hover_box">
+                            주소쓰기
+                        </div>
+                    </div>
+                    <div class="local_box mg">
+                        <div class="text_box">
+                            <p class="text1">서울</p>
+                            <p class="text2">서울시 어딘가</p>
+                        </div>
+                        <div class="hover_box">
+                            주소쓰기
+                        </div>
+                    </div>
+                    <div class="local_box">
+                        <div class="text_box">
+                            <p class="text1">서울</p>
+                            <p class="text2">서울시 어딘가</p>
+                        </div>
+                        <div class="hover_box">
+                            주소쓰기
+                        </div>
+                    </div>
+                    <div class="local_box">
+                        <div class="text_box">
+                            <p class="text1">서울</p>
+                            <p class="text2">서울시 어딘가</p>
+                        </div>
+                        <div class="hover_box">
+                            주소쓰기
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="local_video section">
+            <div class="center">
+                <div class="title_box">
+                    <h2 class="title">요즘 뜨고 있는 포천!</h2>
+                    <p class="sub_title">경기도 포천시에는 어떤 스팟들이 있을까요?</p>
+                </div>
+                <div class="context_wrap">
+                    <div class="left">
+                        <video src="/video/pocheon.mp4" muted loop autoplay></video>
+                    </div>
+                    <div class="right">
+                        <div class="box_list">
+                            <div class="icon"><i class="fa-solid fa-earth-americas"></i></div>
+                            <div class="text_box">
+                                <p class="text1">포천 반월성</p>
+                                <p class="text2">
+                                    첫번째 문단입니다.<br>
+                                    두번째 문단입니다.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="box_list">
+                            <div class="icon"><i class="fa-solid fa-earth-americas"></i></div>
+                            <div class="text_box">
+                                <p class="text1">포천아트밸리</p>
+                                <p class="text2">
+                                    첫번째 문단입니다.<br>
+                                    두번째 문단입니다.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="box_list">
+                            <div class="icon"><i class="fa-solid fa-earth-americas"></i></div>
+                            <div class="text_box">
+                                <p class="text1">고모호수공원</p>
+                                <p class="text2">
+                                    첫번째 문단입니다.<br>
+                                    두번째 문단입니다.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="box_list">
+                            <div class="icon"><i class="fa-solid fa-earth-americas"></i></div>
+                            <div class="text_box">
+                                <p class="text1">허브아일랜드</p>
+                                <p class="text2">
+                                    첫번째 문단입니다.<br>
+                                    두번째 문단입니다.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tour_bus section">
+            <div class="center">
+                <div class="title_box">
+                    <h2 class="title">관광버스타고 지역탐험하자!</h2>
+                    <p class="sub_title">편하게 관광버스에 앉아서 자연의 아름다움을 느껴보세요.</p>
+                </div>
+                <div class="bus_wrap">
+                    <div class="bus_box">
+                        <div class="tour_img">
+                            <img src="/img/popular.jpg" alt="">
+                        </div>
+                        <div class="tour_info">
+                            <p class="tour_title">부산 자유여행 당일치기</p>
+                            <p class="hash_tag">
+                                <span>#해운대</span>
+                                <span>#어디가</span>
+                                <span>#유명할까</span>
+                            </p>
+                            <p class="price"><span>138,000</span>원~</p>
+                        </div>
+                    </div>
+                    <div class="bus_box">
+                        <div class="tour_img">
+                            <img src="/img/popular.jpg" alt="">
+                        </div>
+                        <div class="tour_info">
+                            <p class="tour_title">부산 자유여행 당일치기</p>
+                            <p class="hash_tag">
+                                <span>#해운대</span>
+                                <span>#어디가</span>
+                                <span>#유명할까</span>
+                            </p>
+                            <p class="price"><span>138,000</span>원~</p>
+                        </div>
+                    </div>
+                    <div class="bus_box">
+                        <div class="tour_img">
+                            <img src="/img/popular.jpg" alt="">
+                        </div>
+                        <div class="tour_info">
+                            <p class="tour_title">부산 자유여행 당일치기</p>
+                            <p class="hash_tag">
+                                <span>#해운대</span>
+                                <span>#어디가</span>
+                                <span>#유명할까</span>
+                            </p>
+                            <p class="price"><span>138,000</span>원~</p>
+                        </div>
+                    </div>
+                    <div class="bus_box">
+                        <div class="tour_img">
+                            <img src="/img/popular.jpg" alt="">
+                        </div>
+                        <div class="tour_info">
+                            <p class="tour_title">부산 자유여행 당일치기</p>
+                            <p class="hash_tag">
+                                <span>#해운대</span>
+                                <span>#어디가</span>
+                                <span>#유명할까</span>
+                            </p>
+                            <p class="price"><span>138,000</span>원~</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="local_count section">
+            <div class="center">
+                <div class="count_wrap">
+                    <div class="count_box">
+                        <div class="icon"><i class="fa-solid fa-tower-observation"></i></div>
+                        <p class="local_name">제주</p>
+                        <p class="count_number">0</p>
+                    </div>
+                    <div class="count_box">
+                        <div class="icon"><i class="fa-solid fa-tower-observation"></i></div>
+                        <p class="local_name">광주</p>
+                        <p class="count_number">0</p>
+                    </div>
+                    <div class="count_box">
+                        <div class="icon"><i class="fa-solid fa-tower-observation"></i></div>
+                        <p class="local_name">부산</p>
+                        <p class="count_number">0</p>
+                    </div>
+                    <div class="count_box">
+                        <div class="icon"><i class="fa-solid fa-tower-observation"></i></div>
+                        <p class="local_name">전주</p>
+                        <p class="count_number">0</p>
+                    </div>
+                    <div class="count_box">
+                        <div class="icon"><i class="fa-solid fa-tower-observation"></i></div>
+                        <p class="local_name">강릉</p>
+                        <p class="count_number">0</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="package section">
+            <div class="center">
+                <div class="title_box">
+                    <h2 class="title">편하게 여행 가능한 패키지 여행!</h2>
+                    <p class="sub_title">여행일정이 잘 짜여있는 패키지</p>
+                </div>
+                <div class="package_wrap">
+                    <div class="left">
+                        <p class="big_text">가고싶은 곳 어디든<br>갈 수 있는 패키지여행!</p>
+                        <ul class="package_menu">
+                            <li><a href="#">힐링의 대명사, 제주</a></li>
+                            <li><a href="#">다양한 문화재가 한자리에, 서울</a></li>
+                            <li><a href="#">제 2의 수도권, 부산</a></li>
+                        </ul>
+                    </div>
+                    <div class="right">
+                        <!-- 제주wrap 안 패키지 상품들 -->
+                        <div class="jeju local">
+                            <div class="box">
+                                <img src="/img/popular.jpg" alt="">
+                                <div class="package_info">
+                                    <p class="tour_title">제주 패키지여행 당일치기</p>
+                                    <p class="hash_tag">
+                                        <span>#성산일출봉</span>
+                                        <span>#우도</span>
+                                        <span>#용어쩌구</span>
+                                    </p>
+                                    <p class="price"><span>138,000</span>원~</p>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="/img/popular.jpg" alt="">
+                                <div class="package_info">
+                                    <p class="tour_title">제주 패키지여행 당일치기</p>
+                                    <p class="hash_tag">
+                                        <span>#성산일출봉</span>
+                                        <span>#우도</span>
+                                        <span>#용어쩌구</span>
+                                    </p>
+                                    <p class="price"><span>138,000</span>원~</p>
+                                </div>
+                            </div>
+                            <div class="box">
+                                <img src="/img/popular.jpg" alt="">
+                                <div class="package_info">
+                                    <p class="tour_title">제주 패키지여행 당일치기</p>
+                                    <p class="hash_tag">
+                                        <span>#성산일출봉</span>
+                                        <span>#우도</span>
+                                        <span>#용어쩌구</span>
+                                    </p>
+                                    <p class="price"><span>138,000</span>원~</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="airplan section">
+            <div class="center">
+                <div class="air">
+                    <div class="img"><!--제주항공--></div>
+                    <p class="air_name">제주항공</p>
+                </div>
+                <div class="air">
+                    <div class="img"><!--아시아나항공--></div>
+                    <p class="air_name">아시아나항공</p>
+                </div>
+                <div class="air">
+                    <div class="img"><!--대한항공--></div>
+                    <p class="air_name">대한항공</p>
+                </div>
+                <div class="air">
+                    <div class="img"><!--티웨이항공--></div>
+                    <p class="air_name">티웨이항공</p>
+                </div>
+                <div class="air">
+                    <div class="img"><!--항공--></div>
+                    <p class="air_name">제주항공</p>
+                </div>
+            </div>
+        </div>
     </div>
     <%- include("common/footer.ejs"); %>
 </body>
