--- a/html/css/style.css
+++ b/html/css/style.css
@@ -88,10 +88,10 @@ body {
 }
 #header .h_bot .logo {
   width: 160px;
-  height: 65px;
+  height: 43px;
 }
 #header .h_bot .logo a img {
-  width: 40%;
+  width: 100%;
   height: 100%;
 }
 #header .h_bot .logo a span {
@@ -146,6 +146,425 @@ body {
   background-color: #000;
 }
 
+#container .slide {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+#container .slide .view {
+  width: 400%;
+  height: 855px;
+  display: flex;
+}
+#container .slide .view .slide_box {
+  width: 25%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  left: 0;
+  top: 0;
+}
+#container .slide .view .slide_box:nth-child(1) {
+  background-image: url(/img/slide01.jpg);
+}
+#container .slide .view .slide_box:nth-child(2) {
+  background-image: url(/img/slide02.jpg);
+}
+#container .slide .view .slide_box:nth-child(3) {
+  background-image: url(/img/slide03.jpg);
+}
+#container .slide .view .slide_box:nth-child(4) {
+  background-image: url(/img/slide04.jpg);
+}
+#container .slide .view .slide_box .bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+#container .slide .view .slide_box .text_box {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: center;
+}
+#container .slide .view .slide_box .text_box .slide_title {
+  font-size: 50px;
+  margin-bottom: 38px;
+}
+#container .slide .view .slide_box .text_box .sub_text {
+  font-size: 25px;
+  line-height: 30px;
+  margin-bottom: 40px;
+}
+#container .slide .view .slide_box .text_box .slide_btn a {
+  color: #fff;
+  background-color: skyblue;
+  padding: 8px 20px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+#container .slide .prev_next > div {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+#container .slide .prev_next .prev {
+  left: 20px;
+}
+#container .slide .prev_next .next {
+  right: 20px;
+}
+#container .slide .circle_btn {
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  transform: translateX(-50%);
+  display: flex;
+}
+#container .slide .circle_btn .circle {
+  width: 50px;
+  height: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
+  margin: 0 12px;
+  border-radius: 10px;
+}
+#container .slide .circle_btn .circle.on {
+  background-color: #fff;
+}
+#container .popular_local {
+  display: flex;
+  justify-content: center;
+  padding-top: 120px;
+}
+#container .popular_local .center {
+  width: 57%;
+}
+#container .popular_local .center .title_box .title {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 30px;
+}
+#container .popular_local .center .title_box .sub_title {
+  text-align: center;
+  margin-bottom: 80px;
+  font-size: 15px;
+}
+#container .popular_local .center .local_wrap {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+#container .popular_local .center .local_wrap .local_box {
+  width: 32%;
+  height: 250px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+}
+#container .popular_local .center .local_wrap .local_box:hover .hover_box {
+  bottom: 0;
+}
+#container .popular_local .center .local_wrap .local_box:nth-child(1) {
+  background-image: url(/img/popular.jpg);
+}
+#container .popular_local .center .local_wrap .local_box:nth-child(2) {
+  background-image: url(/img/popular.jpg);
+}
+#container .popular_local .center .local_wrap .local_box:nth-child(3) {
+  background-image: url(/img/popular.jpg);
+}
+#container .popular_local .center .local_wrap .local_box:nth-child(4) {
+  background-image: url(/img/popular.jpg);
+  width: 66%;
+}
+#container .popular_local .center .local_wrap .local_box:nth-child(5) {
+  background-image: url(/img/popular.jpg);
+}
+#container .popular_local .center .local_wrap .local_box .text_box {
+  box-sizing: border-box;
+  color: #fff;
+  margin: 207px 0 0 10px;
+}
+#container .popular_local .center .local_wrap .local_box .hover_box {
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  transition: all 0.5s;
+  text-align: center;
+  color: #fff;
+}
+#container .popular_local .center .local_wrap .mg {
+  margin-bottom: 2%;
+}
+#container .local_video {
+  display: flex;
+  justify-content: center;
+  padding: 100px 0;
+  margin: 180px 0;
+  background-color: #eeeeee;
+}
+#container .local_video .center {
+  width: 100%;
+}
+#container .local_video .center .title_box .title {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 30px;
+}
+#container .local_video .center .title_box .sub_title {
+  text-align: center;
+  margin-bottom: 80px;
+  font-size: 15px;
+}
+#container .local_video .center .context_wrap {
+  display: flex;
+  align-items: center;
+}
+#container .local_video .center .context_wrap > div {
+  width: 50%;
+  margin: 0 30px;
+}
+#container .local_video .center .context_wrap .left {
+  height: 500px;
+}
+#container .local_video .center .context_wrap .left video {
+  width: 100%;
+  height: 100%;
+}
+#container .local_video .center .context_wrap .right {
+  height: 500px;
+}
+#container .local_video .center .context_wrap .right .box_list {
+  height: 23%;
+  background-color: pink;
+  margin-bottom: 1.5%;
+  border-radius: 5px;
+  padding: 25px 30px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.2);
+}
+#container .local_video .center .context_wrap .right .box_list:last-child {
+  margin-bottom: 0;
+}
+#container .local_video .center .context_wrap .right .box_list .icon {
+  font-size: 55px;
+  margin-right: 35px;
+}
+#container .local_video .center .context_wrap .right .box_list .text_box .text1 {
+  font-size: 20px;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+#container .local_video .center .context_wrap .right .box_list .text_box .text2 {
+  font-size: 15px;
+  line-height: 21px;
+}
+#container .tour_bus {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 300px;
+}
+#container .tour_bus .center {
+  width: 70%;
+}
+#container .tour_bus .center .title_box .title {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 30px;
+}
+#container .tour_bus .center .title_box .sub_title {
+  text-align: center;
+  margin-bottom: 80px;
+  font-size: 15px;
+}
+#container .tour_bus .center .bus_wrap {
+  display: flex;
+  justify-content: space-between;
+}
+#container .tour_bus .center .bus_wrap .bus_box {
+  width: 22%;
+  background-color: palegreen;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  position: relative;
+  transition: all 0.5s;
+}
+#container .tour_bus .center .bus_wrap .bus_box:hover {
+  bottom: 20px;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_img img {
+  width: 100%;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_info {
+  padding: 10px;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_info .tour_title {
+  margin-top: 2px;
+  font-size: 18px;
+  font-weight: 600;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_info .hash_tag {
+  margin-top: 7px;
+  font-size: 15px;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_info .hash_tag span {
+  margin-right: 5px;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_info .price {
+  margin: 10px 0 5px;
+}
+#container .tour_bus .center .bus_wrap .bus_box .tour_info .price span {
+  font-size: 22px;
+  font-weight: 600;
+}
+#container .local_count {
+  width: 100%;
+  height: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(/img/popular.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 300px;
+}
+#container .local_count .center {
+  width: 57%;
+}
+#container .local_count .center .count_wrap {
+  display: flex;
+  justify-content: space-between;
+}
+#container .local_count .center .count_wrap .count_box {
+  width: 18%;
+  margin: 0 2%;
+  text-align: center;
+  background-color: #dbdbdb;
+  border-radius: 10px;
+  padding: 15px 0;
+}
+#container .local_count .center .count_wrap .count_box .icon {
+  font-size: 35px;
+  margin-bottom: 10px;
+}
+#container .local_count .center .count_wrap .count_box .local_name {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+#container .local_count .center .count_wrap .count_box .count_number {
+  font-size: 20px;
+}
+#container .package {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 300px;
+}
+#container .package .center {
+  width: 57%;
+}
+#container .package .center .title_box .title {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 30px;
+}
+#container .package .center .title_box .sub_title {
+  text-align: center;
+  margin-bottom: 80px;
+  font-size: 15px;
+}
+#container .package .center .package_wrap {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  position: relative;
+}
+#container .package .center .package_wrap .left {
+  width: 40%;
+  height: 100%;
+  background-image: url("/img/popular.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 87px 0 0 20px;
+}
+#container .package .center .package_wrap .left .big_text {
+  font-size: 30px;
+  line-height: 35px;
+  margin-bottom: 50px;
+}
+#container .package .center .package_wrap .left .package_menu li {
+  width: 53%;
+  background-color: palegreen;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  line-height: 45px;
+  padding-left: 12px;
+}
+#container .package .center .package_wrap .left .package_menu li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #000;
+}
+#container .package .center .package_wrap .right {
+  width: 100%;
+  position: absolute;
+  left: 343px;
+  top: 25%;
+}
+#container .package .center .package_wrap .right .local {
+  display: flex;
+}
+#container .package .center .package_wrap .right .local .box {
+  margin-right: 20px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #dbdbdb;
+}
+#container .package .center .package_wrap .right .local .box img {
+  width: 100%;
+}
+#container .package .center .package_wrap .right .local .box .package_info {
+  padding: 10px;
+}
+#container .package .center .package_wrap .right .local .box .package_info .tour_title {
+  margin-top: 2px;
+  font-size: 18px;
+  font-weight: 600;
+}
+#container .package .center .package_wrap .right .local .box .package_info .hash_tag {
+  margin-top: 7px;
+  font-size: 15px;
+}
+#container .package .center .package_wrap .right .local .box .package_info .hash_tag span {
+  margin-right: 5px;
+}
+#container .package .center .package_wrap .right .local .box .package_info .price {
+  margin: 10px 0 5px;
+}
+#container .package .center .package_wrap .right .local .box .package_info .price span {
+  font-size: 22px;
+  font-weight: 600;
+}
 #container .banner {
   background-color: orchid;
   display: flex;
