--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -23,7 +23,7 @@
     </div>
     <div class="h_bot">
         <div class="center">
-            <h1 class="logo"><a href="/"><img src="/img/logo2.png" alt=""><span><!--동글투어--></span></a></h1>
+            <h1 class="logo"><a href="/"><img src="/img/logo.jpg" alt=""></a></h1>
             <ul class="gnb">
                 <li>
                     <a href="#">해외패키지</a>
